# CircularSlider

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp  main.qml  qml.qrc
controls/: CCheckBox.qml  CLabel.qml  CSlider.qml  CTabButton.qml  CircularSlider.qml
pages/: BasicPropertiesPage.qml  CustomHandlePage.qml  CustomTrackAndProgressPage.qml  NonInteractiveSliderAsProgressIndicator.qml
